fixed overflow bug

--- a/src/Components/Portfolio/PortfolioItem/portfolioItem.css
+++ b/src/Components/Portfolio/PortfolioItem/portfolioItem.css
@@ -4,6 +4,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .portfolio-item-on-bottom {
